# p2v-slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
Python/: MyUtils.py  P2VNet.py  Readmd.md  VoxelDataset.py  VoxelGridIndexer.py
Python/Convertion/: convert_to_onnx.py
Python/DataGeneration/: generate_label.py
Python/Output/model_output/: joint-model.pth
Python/Output/training_items/: debug_0_plot.csv  label_0.csv  label_0_test.csv  label_0_train.csv
Python/Output/training_items/voxels/0/: 1008655222412234115.csv  1026447296041138682.csv  1091178853185556930.csv  1122369020374258993.csv  1136436933473844342.csv  1270683975792010508.csv  1365914953251244882.csv  1471134140266973923.csv  1755549049072613308.csv  1822026272844872546.csv  183298729455441813.csv  1867267005556001648.csv  1887255109822486677.csv  1937794112638728500.csv  2000102808170382369.csv  2028077890003405835.csv  2073448061324144938.csv  2082247461878896213.csv  2092789425003139053.csv  2128661410570404931.csv  2152694903568876184.csv  225734797408163173.csv  230437697685035602.csv  2308216658180845620.csv  2337633142455913609.csv  2369173404932328473.csv  237580621324564019.csv  2406077443722706347.csv  2576697877103284532.csv  2599577771904068917.csv  2603040214075554557.csv  2626107148946976995.csv  2721764829606894167.csv  2865690291268750927.csv  2884959734539493597.csv  288538526636004204.csv  293777567130517409.csv  2988815173914879034.csv  3017978779286506855.csv  3035160869474622285.csv  (+111 more)
Python/Training/: train.py
config/: avia_BG.yaml
config/rviz_cfg/: rviz.rviz
include/: Exp_mat.h  common_lib.h  so3_math.h
include/IKFoM_toolkit/esekfom/: esekfom.hpp
launch/: run_BotanicGarden.launch
model/: ir-net.onnx  ve-net.onnx
src/: IMU_Processing.cpp  IMU_Processing.hpp  ObsScheduler.cpp  ObsScheduler.hpp  PointCloudUn.cpp  PointCloudUn.hpp  implicit_voxel_map.cpp  implicit_voxel_map.hpp  my_tools.hpp  p2v_model.cpp  p2v_model.h  preprocess.cpp  preprocess.hpp  viewer.cpp  viewer.hpp  voxelMapping.cpp  voxel_map_util.cpp  voxel_map_util.hpp
